@@ -176,6 +176,8 @@ AC_SUBST(CDM_LDFLAGS)
 CDM_LIBS="-lCDM"
 AC_SUBST(CDM_LIBS)
 
+CDM_BUFFER_TUNING="$BUFFER_TUNING"
+AC_SUBST(CDM_BUFFER_TUNING)
 
 
 #
