@@ -11,7 +11,7 @@
 
 lib_LIBRARIES = libCDM.a
 
-libCDM_a_CXXFLAGS = @MPI_CFLAGS@ @TP_CFLAGS@ -I$(top_builddir)/include
+libCDM_a_CXXFLAGS = @MPI_CFLAGS@ @TP_CFLAGS@ -I$(top_builddir)/include @CDM_BUFFER_TUNING@
 
 libCDM_a_SOURCES = \
     cdm_ActiveSubDomain.C \
